kubernetes/resources/04 - monitoring/grafana/network.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: grafana
spec:
  rules:
  - host: grafana.k8s.iaminyourpc.xyz
    http: 
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: grafana
            port:
              number: 3000
